--- a/test/xhr-quick.html
+++ b/test/xhr-quick.html
@@ -9,7 +9,7 @@
     <script src="../../lib/closure-library-read-only/closure/goog/base.js"></script>
     <script src="xhr-quick.js"></script>
 </head>
-<body onload="getData('http://federation-server.appspot.com/')">
+<body onload="getData()">
 <div id="log"></div>
 </body>
 </html>
