--- a/web-cotefe-net/htmls/getdata.html
+++ b/web-cotefe-net/htmls/getdata.html
@@ -13,7 +13,7 @@
 			else
 			{
 				cotefe.token= access_token;
-				cotefe.ajax_request(cotefe.application.getUserInfo(cotefe.token,cotefe.me));
+				cotefe.ajax_request(cotefe.application.getUserInfo(cotefe.token,cotefe.me,cotefe.application.onMeDone));
 			}
 		</script>
 	</head>
