--- a/web-cotefe-net/htmls/test.html
+++ b/web-cotefe-net/htmls/test.html
@@ -3,7 +3,21 @@
 	<head>
 		<title>COTEFE</title>
 		<link href="../css/stylesheet.css" rel="stylesheet" type="text/css" media="screen">
-		<script type="text/javascript" src="../scripts/model.js"></script>
+		<script type="text/javascript" src="../scripts/jquery-1.6.2.min.js"></script>		
+		<script>
+			
+			$.ajax({
+				    type: "POST",
+				    dataType: "json",
+				    contentType: "application/json",
+				    url: "http://api.cotefe.net/projects/?access_token=d574b86586a74153a9c4174fe4be8a66",
+				    data: '{"name":"test", "description":"description"}',
+				    success: function(response, status, xhr){
+				        alert(response.events[0]);
+				    }
+				});
+			
+		</script>
 		
 		
 	</head>
