remaking config.js

--- a/web-cotefe-net/htmls/getdata.html
+++ b/web-cotefe-net/htmls/getdata.html
@@ -12,8 +12,8 @@
 			}
 			else
 			{
-				cotefe.token= access_token;
-				cotefe.ajax_request(cotefe.application.getUserInfo(cotefe.token,cotefe.me,cotefe.application.onMeDone));
+				//cotefe.token= access_token;
+				cotefe.application.getUser(access_token); 
 			}
 		</script>
 	</head>
