--- a/web-cotefe-net/htmls/dashboard.html
+++ b/web-cotefe-net/htmls/dashboard.html
@@ -79,7 +79,17 @@
 						</div>
 					</li>
 					<li><a href="#"><span>Tasks</span></a></li>
-					<li><a href="#"><span>Logs</span></a></li>
+					<li><a href="#" id="explore"><span>Explore</span></a>
+						<div class="sub-menu">
+							<ul class="sub-menu-nav">
+								<li><a href="../htmls/testbeds.html" id="testbeds"><span>TestBeds</span></a></li>
+								<li><a href="../htmls/platforms.html" id="platforms"><span>Platforms</span></a></li>
+								<li><a href="../htmls/sensors.html" id="sensors"><span>Sensors</span></a></li>
+								<li><a href="../htmls/actuators.html" id="actuators"><span>Actuators</span></a></li>
+								<li><a href="../htmls/interfaces.html" id="actuators"><span>Interfaces</span></a></li>
+							</ul>
+						</div>
+					</li>
 				</ul>
 				<br />
 				
