project PUT on making

--- a/cotefejs/demo.html
+++ b/cotefejs/demo.html
@@ -21,7 +21,8 @@
 			form input[type="text"]{width:250px;border:1px solid #ccc;height:25px;}
 			form fieldset{position:relative;}
 			fieldset table input[type="text"]{width:190px;border:1px solid #ccc;height:25px;float:right;}
-			textarea{width:100%;height:200px;border:1px solid #ccc;padding:0px;}
+			textarea{width:100%;height:200px;border:1px solid #ccc;padding:0px;color:#2A120A;}
+			input[type="button"]{width:70px;}
 		</style>
 	</head>
 	<body>
