--- a/cotefejs/demo.html
+++ b/cotefejs/demo.html
@@ -6,7 +6,7 @@
   		<script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
   		<script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
   		<script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
-		<script type="text/javascript" src="../scripts/cotefe1.js"></script>
+		<script type="text/javascript" src="../scripts/cotefe.js"></script>
 		
 		<style>
 			div , fieldset {display:block;border:1px solid #ccc;margin:10px;
