PUT being updated

--- a/cotefejs/demo.html
+++ b/cotefejs/demo.html
@@ -13,7 +13,7 @@
 				-moz-box-shadow: 0 0 6px #A4A4A4;
 				-webkit-box-shadow: 0 0 6px #A4A4A4;
 			}
-			div h3,div h1{display:block;margin:0;padding-left:10px;color:#ffffff;background-color:#0174DF;
+			div h3,div h1{display:block;margin:0;padding-left:10px;color:#ffffff;background-color:#2D2D2D;
 				-moz-box-shadow: 0 0 6px #A4A4A4;
 				-webkit-box-shadow: 0 0 6px #A4A4A4;					
 			}	
@@ -26,7 +26,17 @@
 		</style>
 	</head>
 	<body>
-	    <div><h1>COTEFE Client Simulation</h1></div>
+	    <div><h1>COTEFE-JS Test</h1></div>
+	    <div>
+			<h3>URL</h3>
+			<form>
+				<fieldset>
+					
+					<label for="token">Current URL:</label>
+					<input type="text" name="url" value="" />
+				</fieldset>
+			</form>
+		</div>
 		<div>
 			<h3>ID</h3>
 			<form>
