--- a/web-cotefe-net/htmls/index.html
+++ b/web-cotefe-net/htmls/index.html
@@ -58,7 +58,10 @@
 		<div class="float-clear" style="margin-bottom:20px;display:block;">
 			<p style="text-align:center;">COTEFE Community</p>
 		</div>
-		<script type="text/javascript" src="../scripts/config.js"></script>
+		<script type="text/javascript" src="../scripts/jquery-1.6.2.min.js"></script>
+		<script type="text/javascript" src="../scripts/underscore.js"></script>
+		<script type="text/javascript" src="../scripts/backbone.js"></script>
+		<script type="text/javascript" src="../scripts/cotefe.js"></script>
 		<script type="text/javascript" src="../scripts/ejs.js"></script>
 		<script type="text/javascript">		
 			var data={
