--- a/web-cotefe-net/htmls/dashboard.html
+++ b/web-cotefe-net/htmls/dashboard.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="../scripts/jsuri-1.1.1.js"></script>
 		<script type="text/javascript" src="../scripts/ejs.js"></script>
 		<script type="text/javascript" src="../scripts/cotefe.js"></script>
+		<script type="text/javascript" src="../scripts/jquery-ui-1.10.0.custom.min.js"></script>
 		
 		
 		
